force-app/main/default/objects/Practitioner_Accelerator__c/Practitioner_Accelerator__c.object-meta.xml
<CustomObject>
    <label>Virtual Coaching</label>
    <nameField>
        <label>Virtual Coaching Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Coaching</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>