force-app/main/default/objects/Practitioner_Accelerator__c/fields/Agreed_upon_finish_line_and_desired_outc__c.field-meta.xml
<CustomField>
    <fullName>Agreed_upon_finish_line_and_desired_outc__c</fullName>
    <label>Agreed upon finish line and desired outc</label>
    <type>TextArea</type>
</CustomField>