force-app/main/default/objects/Practitioner_Accelerator__c/fields/Assess_CM_confidence_level__c.field-meta.xml
<CustomField>
    <fullName>Assess_CM_confidence_level__c</fullName>
    <label>Assess CM confidence level</label>
    <type>TextArea</type>
</CustomField>