force-app/main/default/objects/Practitioner_Accelerator__c/fields/Change_challenges_documented__c.field-meta.xml
<CustomField>
    <fullName>Change_challenges_documented__c</fullName>
    <label>Change challenges documented</label>
    <type>TextArea</type>
</CustomField>