force-app/main/default/objects/Practitioner_Accelerator__c/fields/CM_measurement__c.field-meta.xml
<CustomField>
    <fullName>CM_measurement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM measurement</label>
    <type>Checkbox</type>
</CustomField>