force-app/main/default/objects/Practitioner_Accelerator__c/fields/Drip_marketing_initiated__c.field-meta.xml
<CustomField>
    <fullName>Drip_marketing_initiated__c</fullName>
    <label>Drip marketing initiated</label>
    <type>TextArea</type>
</CustomField>