force-app/main/default/objects/Practitioner_Accelerator__c/fields/Expectations_negotiation__c.field-meta.xml
<CustomField>
    <fullName>Expectations_negotiation__c</fullName>
    <label>Expectations negotiation</label>
    <type>TextArea</type>
</CustomField>