force-app/main/default/objects/Practitioner_Accelerator__c/fields/Lessons_learned_documented__c.field-meta.xml
<CustomField>
    <fullName>Lessons_learned_documented__c</fullName>
    <label>Lessons learned documented</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>