force-app/main/default/objects/Practitioner_Accelerator__c/fields/Managers_and_supervisors__c.field-meta.xml
<CustomField>
    <fullName>Managers_and_supervisors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managers and supervisors</label>
    <type>Checkbox</type>
</CustomField>