force-app/main/default/objects/Practitioner_Accelerator__c/fields/Project_milestones_shared__c.field-meta.xml
<CustomField>
    <fullName>Project_milestones_shared__c</fullName>
    <label>Project milestones shared</label>
    <type>TextArea</type>
</CustomField>