force-app/main/default/objects/Practitioner_Accelerator__c/fields/Review_needs_assessment_baseline__c.field-meta.xml
<CustomField>
    <fullName>Review_needs_assessment_baseline__c</fullName>
    <label>Review needs assessment baseline</label>
    <type>TextArea</type>
</CustomField>