force-app/main/default/objects/Practitioner_Accelerator__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule</label>
    <type>Checkbox</type>
</CustomField>