force-app/main/default/objects/Practitioner_Accelerator__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff</label>
    <type>Checkbox</type>
</CustomField>