force-app/main/default/objects/Practitioner_Accelerator__c/fields/Step_2_support_plan_preferences__c.field-meta.xml
<CustomField>
    <fullName>Step_2_support_plan_preferences__c</fullName>
    <label>Step 2 support plan preferences</label>
    <type>TextArea</type>
</CustomField>