force-app/main/default/objects/Practitioner_Accelerator__c/fields/Structured_needs_assessment__c.field-meta.xml
<CustomField>
    <fullName>Structured_needs_assessment__c</fullName>
    <label>Structured needs assessment</label>
    <type>TextArea</type>
</CustomField>