force-app/main/default/objects/Practitioner_Accelerator__c/fields/Support_topics_identified__c.field-meta.xml
<CustomField>
    <fullName>Support_topics_identified__c</fullName>
    <label>Support topics identified</label>
    <type>TextArea</type>
</CustomField>