force-app/main/default/objects/Practitioner_Accelerator__c/recordTypes/Practitioner_Accelerator.recordType-meta.xml
<RecordType>
    <fullName>Practitioner_Accelerator</fullName>
    <active>true</active>
    <label>Practitioner Accelerator</label>
</RecordType>